test/compile-fail/resolution/use/no-name/expected.txt
error[E0425]: unresolved item `b`
  ┌─ ./test/compile-fail/resolution/use/no-name/top.rhdl:3:8
  │
3 │ use a::b;
  │        ^ no `b` item in `a`

